reformatted code, bump version..